--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
          <li> Vagrant </li>
          <li> Docker </li>
          <li> Ansible </li>
-         <li> Integración contínua </li>
+         <li> Integración contínua: del desarrollo de software</li>
      </ul>
 </body>
 </html>
